# gmail-summarizer

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  README.md  SETUP_QUICKSTART.md  config.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  quickstart.py  requirements.txt
.github/workflows/: digest.yml  email-digest.yml
scripts/: __init__.py  generate_tokens.py  verify_setup.py
src/: __init__.py  classify.py  config.py  fetch.py  gmail_client.py  main.py  render.py  send.py  summarize.py
tests/: __init__.py  test_classify.py  test_render.py
tests/fixtures/: sample_messages.json
